<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:padding="16dp">

    <!-- Image ovale en haut à gauche -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        app:cardCornerRadius="75dp"
        app:layout_constraintHeight_percent="0.22"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.35">

        <ImageView  android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/salon_description"
            android:scaleType="centerCrop"
            android:src="@drawable/img1" />
    </androidx.cardview.widget.CardView>

    <!-- Image ovale en haut à droite -->

    <!-- Image ovale en bas à gauche -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        app:cardCornerRadius="75dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.28"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.55">

        <ImageView
            android:layout_width="231dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/jardin_description"
            android:scaleType="centerCrop"
            android:src="@drawable/img2" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="75dp"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView1"
        app:layout_constraintWidth_percent="0.45">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/chambre_description"
            android:scaleType="centerCrop"
            android:src="@drawable/img3" />
    </androidx.cardview.widget.CardView>

    <!-- Image ovale en bas à droite -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="75dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.20"
        app:layout_constraintTop_toBottomOf="@id/cardView2"
        app:layout_constraintWidth_percent="0.35">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/cuisine_description"
            android:scaleType="centerCrop"
            android:src="@drawable/img3" />

    </androidx.cardview.widget.CardView>

    <!-- Titre -->

    <!-- Sous-titre -->

    <!-- Container pour le bouton et les icônes -->

    <!-- Texte Sign In -->

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/main_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView4" />

    <TextView
        android:id="@+id/subtitleText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="28dp"
        android:text="@string/subtitle"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.395"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleText" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        app:layout_constraintTop_toBottomOf="@id/subtitleText"
        tools:layout_editor_absoluteX="8dp">

        <!-- Bouton Get Started -->

        <!-- Icônes sociales -->
        <!--  <LinearLayout
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginEnd="16dp"
              android:orientation="horizontal"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintTop_toTopOf="parent">

              <com.google.android.material.card.MaterialCardView
                  android:id="@+id/facebookButton"
                  android:layout_width="48dp"
                  android:layout_height="48dp"
                  android:layout_marginEnd="12dp"
                  app:cardBackgroundColor="@android:color/transparent"
                  app:cardCornerRadius="24dp"
                  app:strokeColor="@color/white"
                  app:strokeWidth="1dp">

                 <ImageView
                      android:layout_width="24dp"
                      android:layout_height="24dp"
                      android:layout_gravity="center"
                      android:contentDescription="@string/facebook_icon"
                      android:src="" />
              </com.google.android.material.card.MaterialCardView>

              <com.google.android.material.card.MaterialCardView
                  android:id="@+id/googleButton"
                  android:layout_width="48dp"
                  android:layout_height="48dp"
                  app:cardBackgroundColor="@android:color/transparent"
                  app:cardCornerRadius="24dp"
                  app:strokeColor="@color/white"
                  app:strokeWidth="1dp">

                  <ImageView
                      android:layout_width="24dp"
                      android:layout_height="24dp"
                      android:layout_gravity="center"
                      android:contentDescription="@string/google_icon"
                      android:src="" />
              </com.google.android.material.card.MaterialCardView>

          </LinearLayout>-->

        <com.google.android.material.button.MaterialButton
            android:id="@+id/getStartedButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="104dp"
            android:hapticFeedbackEnabled="true"
            android:paddingHorizontal="32dp"
            android:text="@string/get_started"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:backgroundTint="@color/miel"
            app:cornerRadius="24dp"
            app:elevation="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:rippleColor="@color/beige" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/sign_in_prompt"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.339"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonContainer" />

</androidx.constraintlayout.widget.ConstraintLayout>
